--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "personal_portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,13 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^2.6.0",
+    "@astrojs/node": "^5.3.6",
     "@astrojs/react": "^2.2.1",
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
+    "@contentful/rich-text-html-renderer": "^16.1.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "astro": "^2.8.1",
     "axios": "^1.4.0",
+    "contentful": "^10.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
